syntax="proto3";

package pb;

option go_package="./pkg/pb";

service AdminService{
   rpc Login(AdminLoginRequest) returns (AdminLoginResponse){}
}



message AdminDetails{
    uint64 id=1;
    string name=2;
    string email=3;
    string phno=4;
}

message AdminLoginRequest{
    string email=1;
    string password=2;
}

message AdminLoginResponse{
    string token=1;
    AdminDetails admindetails=2;
}